--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
-    <string name="app_name">Class3Demo2</string>
+    <string name="app_name">me2you</string>
     <string name="date">Date:</string>
 </resources>
